# SDL-Compile-Pipeline

./: CMakeLists.txt  README.md  main.c  makefile
.github/workflows/: build-linux.yml  ci-linux.yml  ci-vita.yml  ci-webgl.yml  deploy.yml
